--- a/index.html
+++ b/index.html
@@ -6,20 +6,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/mainStyle.css">
+  <link href="https://fonts.googleapis.com/css?family=Kumar+One" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 	<nav class="navbar navbar-inverse">
+		<ul class="nav navbar-nav navbar-left">
+			<h3>RAÚL GARCÍA FERNÁNDEZ</h3>
+		</ul>
 		<ul class="nav navbar-nav navbar-right">
-			<li><a href="#">Link</a></li>
-			<li><a href="#">Link</a></li>
+			<li><a href="#">BLOG</a></li>
+			<li><a href="#">KNOWLEDGE</a></li>
+			<li><a href="#">CONTACT US</a></li>
 		</ul>
 	</nav>
 	<div id="principal" class="container-fluid bg-1 text-center">
 		<img height="200" width="200" class="img-circle" src="svg/myAvatar.svg" alt="Bird">
-		<h3>RAÚL GARCÍA FERNÁNDEZ</h3>
-		<h4>Computer engenieer</h4>
+		<h3>WEB DEVELOPER FULL STACK</h3>
+		<h4>Trying to specialize on machine learning</h4>
 	</div>
 
 </body>
