se me olvido meter CV

--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
 	</nav>
 	<div id="principal" class="container-fluid bg-1 text-center" style="background-image:url('img/header.jpg');background-repeat:no-repeat;background-size:cover;">
 		<img height="200" width="200" class="img-circle" src="svg/myAvatar.svg" alt="Bird">
+		<br></br>
 		<h3>WEB DEVELOPER FULL STACK</h3>
 		<h4>Trying to specialize on machine learning</h4>
+		<button class="btn-default btn-lg btn-success"><b id="estado">Studing</b></button>
 	</div>
 	<div id="knowledge" class="container-fluid bg-2 text-center">
 		<div id="knowledge-cells" class="row">
@@ -56,11 +58,34 @@
 			<p>Here i put some explication</p>
 		</div>
 	</div>
-	<div id="contactus" class="container-fluid bg-3 text-center">
-		<h3>What Am I?</h3>
-		<p>Lorem ipsum..</p>
-		<a href="#" class="btn btn-default btn-lg">Search</a>
-	</div>
+	
+	<section id="contactus">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-8 col-lg-offset-2 text-center">
+						<h2 class="section-heading">Let's Get In Touch!</h2>
+						<hr class="primary">
+						<p>If you need some of me not doubt on comunicated with me. I answer you on the ways below this.</p>
+					</div>
+					<div id="telefono" class="col-lg-4 col-lg-offset-2 text-center">
+						<span class="glyphicon glyphicon-phone"></span>
+						<p>687037489</p>
+					</div>
+					<div id="email" class="col-lg-4 text-center">
+						<span class="glyphicon glyphicon-send"></span>
+						<p><a href="mailto:raulgf92@gmail.com">raulgf92@gmail.com</a></p>
+					</div>
+				</div>
+			</div>
+			<div id="curriculum" class="container text-center">
+                <h2>Or you can download my curriculum if you like</h2>
+				<span class="glyphicon glyphicon-duplicate"></span>
+				<br></br>
+				<button class="btn btn-info"><a href="resource/CV.pdf" target="_blank" >CURRICULUM</a></button>
+                
+            </div>
+	</section>
+	
 	<footer class="footer text-center">
 		<p>Desing by: Raúl Garcia Fernandez | 01/2017 Site version: 2.0.0</p>
 	</footer>
