--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			</div>
 		</div>
 		<div id="knowledge-explain" class="text-left">
-			<p>Here i put some explication</p>
+			<p>Here i put some explication, but not today</p>
 		</div>
 	</div>
 	
