--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 		});
 		app.directive("databaseDocument", function() {
 			return {
-				templateUrl : "doc/database.html"
+				templateUrl : "doc/databaseWordVersion.html"
 			};
 		});
 		app.controller('selectExplain', function($scope,$compile) {
